--- a/module-25/useable-event.html
+++ b/module-25/useable-event.html
@@ -32,6 +32,7 @@
          const inputText = document.getElementById('set-text')
          const p = document.getElementById('clicking-methode');
          p.innerText = inputText.value;
+         inputText.value = '';
       })
    </script>
 </body>
