--- a/module-25/module-26/link-pager.html
+++ b/module-25/module-26/link-pager.html
@@ -4,9 +4,48 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+   <title>deposit & withdraw</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
-   <h2>Welcome to my father bank</h2>
+   <header>
+      <h2 class="text-3xl font-medium text-center mt-10"> Colo Dekhi  <span class="text-rose-700">BAAP KA BANK</span> Ar Ki Obosta </h2>
+   </header>
+   <main class="w-3/4 mx-auto">
+      <section>
+         <div class="grid grid-cols-3 gap-4 my-7 text-white">
+            <div class="bg-blue-300 text-center py-2  rounded">
+               <h3 class="text-3xl mb-3"> Deposit</h3>
+               <h4 class="font-medium text-5xl">$00</h4>
+            </div>
+            <div class="bg-red-200 text-center py-2  rounded">
+               <h3 class="text-3xl mb-3"> Withdraw</h3>
+               <h4 class="font-medium text-5xl">$00</h4>
+            </div>
+            <div class="bg-orange-300 text-center py-2  rounded">
+               <h3 class="text-3xl mb-3"> Balance</h3>
+               <h4 class="font-medium text-5xl">$10,000</h4>
+            </div>
+         </div>
+      </section>
+
+      <section>
+         <div class="grid grid-cols-2 gap-4">
+            <div class="bg-orange-200 pl-6">
+               <h3 class="text-2xl">Please Deposit</h3>
+               <input type="text" name="" id="Deposit-amount" class="border-2 border-black rounded block w-80 mt-2 px-4 py-2" placeholder="$ amount you want to deposit">
+               <button id="login-submit" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">Deposit</button>
+            </div>
+            <div class="bg-emerald-200 pl-6">
+               <h3 class="text-2xl">Please Withdraw</h3>
+               <input type="text" name="" id="withdraw-amount" class="border-2 border-black rounded block w-80 mt-2 px-4 py-2" placeholder="$ amount you want to withdraw">
+               <button id="login-submit" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">withdraw</button>
+            </div>
+         </div>
+      </section>
+   </main>
+   <script src="baap-er-bank.js"></script>
 </body>
 </html>
