--- a/module-25/module-26/link-pager.html
+++ b/module-25/module-26/link-pager.html
@@ -36,12 +36,12 @@
             <div class="bg-orange-200 pl-6">
                <h3 class="text-2xl">Please Deposit</h3>
                <input type="text" name="" id="Deposit-amount" class="border-2 border-black rounded block w-80 mt-2 px-4 py-2" placeholder="$ amount you want to deposit">
-               <button id="login-submit" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">Deposit</button>
+               <button id="deposit-btn" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">Deposit</button>
             </div>
             <div class="bg-emerald-200 pl-6">
                <h3 class="text-2xl">Please Withdraw</h3>
                <input type="text" name="" id="withdraw-amount" class="border-2 border-black rounded block w-80 mt-2 px-4 py-2" placeholder="$ amount you want to withdraw">
-               <button id="login-submit" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">withdraw</button>
+               <button id="withdrow-btn" class="bg-red-700 my-2 px-4 py-1 font-medium text-white rounded-md">withdraw</button>
             </div>
          </div>
       </section>
