--- a/module-25/module-26/link-pager.html
+++ b/module-25/module-26/link-pager.html
@@ -18,15 +18,15 @@
          <div class="grid grid-cols-3 gap-4 my-7 text-white">
             <div class="bg-blue-300 text-center py-2  rounded">
                <h3 class="text-3xl mb-3"> Deposit</h3>
-               <h4 class="font-medium text-5xl">$00</h4>
+               <h4 class="font-medium text-5xl">$<span id="added-money">00</span></h4>
             </div>
             <div class="bg-red-200 text-center py-2  rounded">
                <h3 class="text-3xl mb-3"> Withdraw</h3>
-               <h4 class="font-medium text-5xl">$00</h4>
+               <h4 class="font-medium text-5xl">$<span id="withdrawal-money">00</span></h4>
             </div>
             <div class="bg-orange-300 text-center py-2  rounded">
                <h3 class="text-3xl mb-3"> Balance</h3>
-               <h4 class="font-medium text-5xl">$10,000</h4>
+               <h4 class="font-medium text-5xl">$<span id="total-balance">1000</span></h4>
             </div>
          </div>
       </section>
@@ -46,6 +46,6 @@
          </div>
       </section>
    </main>
-   <script src="baap-er-bank.js"></script>
+   <script src="link-pager.js"></script>
 </body>
 </html>
